--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -15,7 +15,7 @@
         android:id="@+id/statusTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Searching for device..." />
+        android:text="Tap connect to scan for a Dreamband device" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -23,7 +23,28 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBarBleActive"
         android:indeterminate="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:layout_below="@+id/statusTextView"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progressBarBleActive"
+        android:layout_alignParentStart="true"
+        android:id="@+id/button2"
+        android:onClick="onConnect" />
+
+    <Button
+        android:text="Disconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_below="@+id/progressBarBleActive"
+        android:layout_toEndOf="@+id/button2"
+        android:layout_marginStart="25dp"
+        android:onClick="onDisconnect" />
 
     <Button
         android:id="@+id/button_unsyncedSessionCount"
@@ -31,9 +52,8 @@
         android:layout_height="wrap_content"
         android:onClick="onGetUnsyncedSessionCount"
         android:text="Get Unsynced Session Count"
-        android:layout_below="@+id/statusTextView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
