--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -53,7 +53,18 @@
         android:onClick="onGetUnsyncedSessionCount"
         android:text="Get Unsynced Session Count"
         android:layout_below="@+id/button2"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="80dp" />
+
+    <Button
+        android:id="@+id/btnOSVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onGetOSVersion"
+        android:text="Get OS Version"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
 
 </RelativeLayout>
