--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -46,15 +46,37 @@
         android:layout_marginStart="25dp"
         android:onClick="onDisconnect" />
 
-    <Button
-        android:id="@+id/button_unsyncedSessionCount"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onGetUnsyncedSessionCount"
-        android:text="Get Unsynced Session Count"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/txtCommand"
+        android:hint="Enter custom command"
         android:layout_below="@+id/button2"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="80dp" />
+        android:layout_marginTop="11dp" />
+
+    <Button
+        android:text="Send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCustomCommand"
+        android:layout_alignBottom="@+id/txtCommand"
+        android:layout_toEndOf="@+id/button_unsyncedSessionCount"
+        android:onClick="onCustomCommand" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="30"
+        android:height="75dp"
+        android:id="@+id/responseText"
+        android:hint="Command response will be shown here"
+        android:layout_below="@+id/txtCommand"
+        android:layout_alignParentStart="true"
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/btnOSVersion"
@@ -62,9 +84,19 @@
         android:layout_height="wrap_content"
         android:onClick="onGetOSVersion"
         android:text="Get OS Version"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/responseText"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="33dp" />
+
+    <Button
+        android:id="@+id/button_unsyncedSessionCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onGetUnsyncedSessionCount"
+        android:text="Get Unsynced Session Count"
+        android:layout_below="@+id/btnOSVersion"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="19dp" />
 
 
 </RelativeLayout>
