Added event output ids as a parameter to the observeEvents() method. Added button to example GUI to subscribe to events. Added CRC32 checksum on binary data output.

--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -98,5 +98,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="19dp" />
 
+    <Button
+        android:text="Observe Events"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/btnOSVersion"
+        android:layout_toEndOf="@+id/btnOSVersion"
+        android:layout_marginStart="24dp"
+        android:id="@+id/button3"
+        android:onClick="onObserveEvents" />
+
 
 </RelativeLayout>
