Added better handling for disconnecting. Fixed potential race condition when the final status char is written (indicating the end of a response) but all data was not fully read yet.

--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -94,6 +94,7 @@
         android:layout_height="wrap_content"
         android:onClick="onGetUnsyncedSessionCount"
         android:text="Get Unsynced Session Count"
+        android:visibility="invisible"
         android:layout_marginTop="18dp"
         android:layout_below="@+id/button3"
         android:layout_alignParentStart="true" />
