--- a/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
+++ b/AuroraDreamband/app/src/main/res/layout/activity_sdkexample.xml
@@ -119,5 +119,61 @@
         android:layout_marginStart="19dp"
         android:onClick="onDisableEvents" />
 
+    <Button
+        android:text="List Profiles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button_unsyncedSessionCount"
+        android:layout_alignParentStart="true"
+        android:id="@+id/btnListProfiles"
+        android:onClick="onListProfiles" />
+
+    <Button
+        android:text="Unload Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button_unsyncedSessionCount"
+        android:layout_alignStart="@+id/button4"
+        android:id="@+id/button6"
+        android:onClick="onUnloadProfile" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/txtProfileName"
+        android:hint="Profile Name"
+        android:layout_below="@+id/button_unsyncedSessionCount"
+        android:layout_alignStart="@+id/button6" />
+
+    <TextView
+        android:text="Profile Name:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/txtProfileName"
+        android:layout_alignBottom="@+id/txtProfileName"
+        android:layout_alignEnd="@+id/btnListProfiles" />
+
+    <Button
+        android:text="Read Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnReadProfile"
+        android:layout_below="@+id/txtProfileName"
+        android:layout_alignStart="@+id/textView"
+        android:onClick="onReadProfile" />
+
+    <Button
+        android:text="Load Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtProfileName"
+        android:layout_alignStart="@+id/txtProfileName"
+        android:id="@+id/btnLoadProfile"
+        android:onClick="onLoadProfile" />
+
 
 </RelativeLayout>
