--- a/app/src/main/res/layout/activity_sdkexample.xml
+++ b/app/src/main/res/layout/activity_sdkexample.xml
@@ -17,6 +17,17 @@
 
 
         <Button
+            android:id="@+id/button16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="onUseIndicationsClick"
+            android:text="Use Indications"
+            app:layout_constraintStart_toEndOf="@+id/button7"
+            app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+        <Button
             android:id="@+id/button11"
             android:layout_width="63dp"
             android:layout_height="49dp"
